--- a/src/scss/partials/utilities/_variables.scss
+++ b/src/scss/partials/utilities/_variables.scss
@@ -15,5 +15,5 @@ $font-size-xs: clamp(0.75rem, 1vw, 0.875rem);
 $font-size-sm: clamp(0.875rem, 1vw, 1rem);
 $font-size-md: clamp(1rem, 2vw, 1.45rem);
 $font-size-lg: clamp(1.3rem, 2vw, 2rem);
-$font-size-xl: clamp(2rem, 3vw, 3.2rem);
-$font-size-xxl: clamp(3rem, 4vw, 5rem);
+$font-size-xl: clamp(1.5rem, 3vw, 3.2rem);
+$font-size-xxl: clamp(2.1rem, 4vw, 4.4rem);
